--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
-    "express-validator": "^5.3.0"
+    "express-validator": "^5.3.0",
+    "mongoose": "^5.3.9"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
