--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
-    "mongoose": "^5.3.9"
+    "mongoose": "^5.3.9",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
