--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.9",
     "multer": "^1.4.1"
   },
