Connect user and posts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
       "program": "${workspaceFolder}/server/app.js",
       "restart": true,
       "runtimeExecutable": "nodemon",
+      "cwd": "${workspaceFolder}/server",
       "console": "integratedTerminal"
     }
   ]
