--- a/server-graphql/package.json
+++ b/server-graphql/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.9",
     "multer": "^1.4.1",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "validator": "^10.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
