--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.0.2",
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.5",
+    "sinon": "^7.2.7"
   }
 }
